# libxdaq-dist

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/conan_profiles/: macos-14-arm64  macos-14-x64  macos-15-arm64  ubuntu-22.04-x64  ubuntu-24.04-x64  windows-2022-x64
.github/workflows/: build_and_test_plugin.yml
examples/: CMakeLists.txt  README.md  conanfile.txt  set_ttl_out.cc
libxdaq/linux/x86_64/lib/cmake/xdaq/: xdaq-config.cmake
libxdaq/linux/x86_64/lib/xdaq/plugin/: libok_device_plugin.so.0
libxdaq/macos-14-arm64/lib/xdaq/plugin/: libok_device_plugin.0.0.1.dylib  libok_device_plugin.0.dylib  libthor_device_plugin.0.0.1.dylib  libthor_device_plugin.dylib
libxdaq/macos-14-x64/lib/cmake/xdaq/: xdaq-targets-release.cmake  xdaq-targets.cmake
libxdaq/macos-14-x64/lib/cmake/xdaq/plugin/: ok_device_plugin-targets-release.cmake
libxdaq/macos-14-x64/lib/xdaq/plugin/: libok_device_plugin.0.0.1.dylib  libthor_device_plugin.0.0.1.dylib
libxdaq/macos/armv8/include/xdaq/xdaq/: device.h
libxdaq/macos/armv8/lib/xdaq/plugin/: libok_device_plugin.dylib  libthor_device_plugin.0.dylib
libxdaq/ubuntu-22.04-x64/lib/cmake/xdaq/plugin/: ok_device_plugin-targets-release.cmake
libxdaq/ubuntu-22.04-x64/lib/xdaq/plugin/: libok_device_plugin.so.0.0.1
libxdaq/windows-2022-x64/include/xdaq/xdaq/: device_plugin.h
libxdaq/windows-2022-x64/lib/xdaq/: xdaq_device.lib
libxdaq/windows/x86_64/lib/cmake/xdaq/: xdaq-targets-release.cmake
test_package/: CMakeLists.txt  conanfile.py  test_device_manager.cc  test_plugin.cc
tests/: test_plugin.cc
(+7 files in other folders)
